--- a/src/moveit_arm/config/controller.yaml
+++ b/src/moveit_arm/config/controller.yaml
@@ -1,4 +1,4 @@
-controller_manager_ns: /
+#controller_manager_ns: /
 controller_list:
   - name: arm_controller
     action_ns: follow_joint_trajectory
