--- a/src/moveit_arm/config/ros_controllers.yaml
+++ b/src/moveit_arm/config/ros_controllers.yaml
@@ -20,4 +20,12 @@ joint_state_controller:
   type: joint_state_controller/JointStateController
   publish_rate: 50
 controller_list:
-  []
+  - name: arm_controller
+    action_ns: follow_joint_trajectory
+    default: True
+    type: FollowJointTrajectory
+    joints:
+      - One_joint
+      - Two_joint
+      - Three_joint
+      - Four_joint
